holyc-parser/tests/corpus/passing/100-stmt-stmt-goto-label.hc
U0 SE_gl()  { goto SE_GL_l; SE_GL_l: ; }
