holyc-parser/tests/corpus/failing/015-errors-err-dup-label.hc
U0 EDL_f() { EDL_a: ; EDL_a: ; }
